<?xml version="1.0"?>
<package>
  <name>parking_lot_msgs</name>
  <version>1.0.0</version>
  <description>parking_lot_msgs</description>
  <maintainer email="xxx@gmail.com">xxx</maintainer>

  <license>BSD</license>
  <author >Shaoteng Wu</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
